  * direct: support splice() from TCP socket to pipe
  * istream: direct() returns -3 if stream has been closed
  * hstock: don't destroy stocks while items are being created
  * tcp-stock: limit number of connections per host to 256
  * translate, http-client, ajp-client, cgi, http-cache: verify the HTTP
    response status
  * prototypes/translate.py: disallow "/../" and null bytes
  * uri-parser: strict RFC 2396 URI verification
  * uri-parser: don't unescape the URI path
  * http-client, ajp-client: verify the request URI
  * uri-escape: unescape each character only once
  * allow 8192 connections by default
  * allow 65536 file handles by default
  * added package cm4all-jailed-beng-proxy-delegate-helper

 --

cm4all-beng-proxy (0.6.23) unstable; urgency=low

  * header-forward: log session information
  * prototypes/translate.py: added /cgi-bin/ location
  * http-server: disable keep-alive for HTTP/1.0 clients
  * http-server: don't send "Connection: Keep-Alive"
  * delegate-stock: clear the environment
  * delegate-stock: added jail support
  * delegate-client: reuse helper process after I/O error

 -- Max Kellermann <mk@cm4all.com>  Mon, 12 Oct 2009 17:29:35 +0200

cm4all-beng-proxy (0.6.22) unstable; urgency=low

  * istream-tee: clear both "enabled" flags in the eof/abort handler
  * istream-tee: fall back to first data() return value if second stream
    closed itself
  * http-cache: don't log body_abort after close

 -- Max Kellermann <mk@cm4all.com>  Thu, 01 Oct 2009 19:19:37 +0200

cm4all-beng-proxy (0.6.21) unstable; urgency=low

  * http-client: log more error messages
  * delegate-stock: added the DOCUMENT_ROOT environment variable
  * response, widget: accept "application/xhtml+xml"
  * cookie-server: allow square brackets in unquoted cookie values
    (violating RFC 2109 and RFC 2616)

 -- Max Kellermann <mk@cm4all.com>  Thu, 01 Oct 2009 13:55:40 +0200

cm4all-beng-proxy (0.6.20) unstable; urgency=low

  * stock: clear stock after 60 seconds idle